# rust-asynchronous-grpc-server-iot

./: .gitignore  Cargo.toml  README.md  build.rs
client/go/: client.go  go.mod  iot_manifest.pb.go  iot_manifest_grpc.pb.go
client/python/: client.py  iot_manifest_pb2.py  iot_manifest_pb2_grpc.py
data/: devices.json  user_data.json
proto/: iot_manifest.proto
src/: auth.rs  device.rs  server.rs
