[package]
name = "rust-asynchronous-grpc-server-iot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "iot-server"
path = "src/server.rs"

[dependencies]
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"