[package]
name = "rust-asynchronous-grpc-server-iot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "iot-server"
path = "src/server.rs"

[dependencies]
tonic = "0.9.2"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
jsonwebtoken = "8.3.0"
chrono = "0.4.24"

[build-dependencies]
tonic-build = "0.9.2"